# bingx-python

./: .flake8  API_V3_MIGRATION.md  API_V3_UPDATE_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: python-package.yml
bingx/: __init__.py  client.py  coinm_client.py  exceptions.py
bingx/http/: __init__.py  base_client.py
bingx/services/: __init__.py  account.py  agent.py  announcement.py  contract.py  copy_trading.py  listen_key.py  market.py  spot_account.py  sub_account.py  trade.py  twap.py  wallet.py
bingx/services/coinm/: __init__.py  listen_key.py  market.py  trade.py
bingx/websocket/: __init__.py  account_data_stream.py  market_data_stream.py
examples/: api_v3_examples.py  basic_usage.py  coinm_example.py  trading_example.py  websocket_example.py
tests/: __init__.py  test_client.py  test_exceptions.py  test_http_client.py
